--- a/index.html
+++ b/index.html
@@ -2,23 +2,19 @@
 <html lang="es">
 <head>
   <meta charset="UTF-8">
-  <title>Primita 💖</title>
+  <title>Primita</title>
   <style>
     body {
-      margin: 0;
-      background: black;
-      color: #00ffcc;
-      font-family: 'Courier New', monospace;
+      margin: 0; padding: 0;
+      background: #000;
       overflow: hidden;
+      font-family: 'Courier New', monospace;
     }
 
     canvas {
-      position: fixed;
-      top: 0;
-      left: 0;
+      position: fixed; top: 0; left: 0;
       z-index: 0;
     }
-
     .texto {
       position: absolute;
       top: 30%;
@@ -27,7 +23,8 @@
       font-size: 2.5em;
       z-index: 1;
       white-space: nowrap;
-      text-shadow: 0 0 10px #00ffff;
+      color: #ff77cc;
+      text-shadow: 0 0 8px #ff99dd;
     }
   </style>
 </head>
@@ -36,63 +33,84 @@
   <div class="texto" id="mensaje"></div>
 
   <script>
-    // Efecto matrix
     const canvas = document.getElementById('matrix');
     const ctx = canvas.getContext('2d');
-    canvas.height = window.innerHeight;
     canvas.width = window.innerWidth;
+    canvas.height = window.innerHeight;
 
-    let letters = Array(256).join("1").split("");
-    const draw = () => {
-      ctx.fillStyle = "rgba(0, 0, 0, 0.05)";
+    const cols = canvas.width / 10;
+    let drops = Array(Math.floor(cols)).fill(0);
+
+    function drawMatrix() {
+      ctx.fillStyle = 'rgba(0, 0, 0, 0.1)';
       ctx.fillRect(0, 0, canvas.width, canvas.height);
-      ctx.fillStyle = "#0F0";
-      letters.map((y_pos, index) => {
-        let text = String.fromCharCode(3e4 + Math.random() * 33);
-        let x = index * 10;
-        ctx.fillText(text, x, y_pos);
-        letters[index] = y_pos > canvas.height + Math.random() * 1e4 ? 0 : y_pos + 10;
-      });
-    };
-    setInterval(draw, 33);
+      ctx.fillStyle = '#ff77cc';
+      ctx.font = '15px monospace';
 
-    // Texto tipo máquina de escribir
-    const frases = [
-      "Primita",
-      "La mejor ❤️‍🩹"
-    ];
+      for (let i = 0; i < drops.length; i++) {
+        const text = String.fromCharCode(0x30A0 + Math.random() * 96);
+        const x = i * 10;
+        const y = drops[i] * 15;
+        ctx.fillText(text, x, y);
 
-    let i = 0;
-    let j = 0;
-    let current = "";
-    let isDeleting = false;
+        if (y > canvas.height && Math.random() > 0.98) {
+          drops[i] = 0;
+          // efecto explosión
+          explode(x, y);
+        }
+        drops[i]++;
+      }
+    }
 
-    function escribir() {
-      const div = document.getElementById("mensaje");
+    function explode(x, y) {
+      const count = 20;
+      for (let i = 0; i < count; i++) {
+        setTimeout(() => {
+          ctx.fillStyle = '#ff99dd';
+          ctx.font = '16px monospace';
+          const dx = (Math.random() - 0.5) * 50;
+          const dy = (Math.random() - 0.5) * 50;
+          ctx.fillText('♫', x + dx, y + dy);
+        }, i * 20);
+      }
+    }
+
+    setInterval(drawMatrix, 50);
+
+    const frases = ["Primita", "La mejor ❤️‍🩹"];
+    let i = 0, j = 0, current = "", deleting = false;
+
+    function typeWriter() {
+      const el = document.getElementById('mensaje');
       if (i < frases.length) {
-        if (!isDeleting) {
+        if (!deleting) {
           current = frases[i].substring(0, j++);
-          div.innerHTML = current;
+          el.innerHTML = current;
           if (j > frases[i].length) {
-            isDeleting = true;
-            setTimeout(escribir, 1000);
+            deleting = true;
+            setTimeout(typeWriter, 1000);
             return;
           }
         } else {
           current = frases[i].substring(0, j--);
-          div.innerHTML = current;
+          el.innerHTML = current;
           if (j < 0) {
-            isDeleting = false;
+            deleting = false;
             i++;
-            setTimeout(escribir, 300);
+            setTimeout(typeWriter, 300);
             return;
           }
         }
-        setTimeout(escribir, 100);
+        setTimeout(typeWriter, 100);
       }
     }
 
-    escribir();
+    typeWriter();
+    window.addEventListener('resize', () => {
+      canvas.width = window.innerWidth;
+      canvas.height = window.innerHeight;
+      drops = Array(Math.floor(canvas.width / 10)).fill(0);
+    });
   </script>
 </body>
 </html>
