--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="es">
 <head>
   <meta charset="UTF-8" />
-  <title>Hacking Sofía</title>
+  <title>Sofía Matrix</title>
   <style>
     html, body {
       margin: 0;
@@ -12,63 +12,21 @@
       height: 100%;
       font-family: monospace;
     }
-
     canvas {
       display: block;
-    }
-
-    #center-text {
-      position: absolute;
-      top: 50%;
-      left: 50%;
-      transform: translate(-50%, -50%);
-      color: hotpink;
-      font-size: 4em;
-      font-weight: bold;
-      text-shadow: 0 0 20px hotpink;
-      z-index: 1;
     }
   </style>
 </head>
 <body>
-  <div id="center-text">Sofía</div>
   <canvas id="matrixCanvas"></canvas>
 
   <script>
-    const canvas = document.getElementById('matrixCanvas');
-    const ctx = canvas.getContext('2d');
+    const canvas = document.getElementById("matrixCanvas");
+    const ctx = canvas.getContext("2d");
 
-    canvas.height = window.innerHeight;
+    // Ajustar tamaño del canvas
     canvas.width = window.innerWidth;
+    canvas.height = window.innerHeight;
 
-    const katakana = "アァイィウヴエェオカキクケコサシスセソタチツテトナニヌネノハヒフヘホマミムメモヤユヨラリルレロワンABCDEFGHIJKLMNOPQRSTUVWXYZ0123456789#$%&";
-    const symbols = katakana.split("");
-
-    const fontSize = 14;
-    const columns = canvas.width / fontSize;
-
-    const drops = Array.from({ length: columns }).fill(1);
-
-    function draw() {
-      ctx.fillStyle = "rgba(0, 0, 0, 0.05)";
-      ctx.fillRect(0, 0, canvas.width, canvas.height);
-
-      ctx.fillStyle = "hotpink";
-      ctx.font = fontSize + "px monospace";
-
-      drops.forEach((y, i) => {
-        const text = symbols[Math.floor(Math.random() * symbols.length)];
-        const x = i * fontSize;
-        ctx.fillText(text, x, y * fontSize);
-
-        if (y * fontSize > canvas.height && Math.random() > 0.975) {
-          drops[i] = 0;
-        }
-        drops[i]++;
-      });
-    }
-
-    setInterval(draw, 50);
-  </script>
-</body>
-</
+    // Caracteres chinos estilo "
+    
