--- a/index.html
+++ b/index.html
@@ -1,43 +1,73 @@
-import os
-import random
-import time
+<!DOCTYPE html>
+<html lang="es">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>SANTI Hack Effect</title>
+  <style>
+    body {
+      margin: 0;
+      background: black;
+      color: #00aaff;
+      font-family: monospace;
+      overflow: hidden;
+    }
 
-# Caracteres estilo hacking
-symbols = "アカサタナハマヤラワ0123456789@#&$%"
+    canvas {
+      position: absolute;
+      top: 0;
+      left: 0;
+    }
 
-# Limpia la pantalla
-def clear():
-    os.system('clear')
+    .center-text {
+      position: absolute;
+      top: 40%;
+      width: 100%;
+      text-align: center;
+      font-size: 5em;
+      font-weight: bold;
+      color: #00aaff;
+      text-shadow: 0 0 10px #00aaff, 0 0 20px #00aaff;
+      z-index: 2;
+    }
+  </style>
+</head>
+<body>
+  <div class="center-text">SANTI</div>
+  <canvas id="matrix"></canvas>
 
-# Colores ANSI (azul fuerte)
-BLUE = "\033[1;34m"
-RESET = "\033[0m"
+  <script>
+    const canvas = document.getElementById('matrix');
+    const ctx = canvas.getContext('2d');
 
-# Mostrar el texto en el centro
-def show_title():
-    print("\n" * 10)
-    print(BLUE + " " * 15 + "███████╗ █████╗ ███╗   ██╗████████╗██╗██╗")
-    print(" " * 15 + "██╔════╝██╔══██╗████╗  ██║╚══██╔══╝██║██║")
-    print(" " * 15 + "█████╗  ███████║██╔██╗ ██║   ██║   ██║██║")
-    print(" " * 15 + "██╔══╝  ██╔══██║██║╚██╗██║   ██║   ╚═╝╚═╝")
-    print(" " * 15 + "███████╗██║  ██║██║ ╚████║   ██║   ██╗██╗")
-    print(" " * 15 + "╚══════╝╚═╝  ╚═╝╚═╝  ╚═══╝   ╚═╝   ╚═╝╚═╝" + RESET)
-    print("\n" * 2)
+    canvas.height = window.innerHeight;
+    canvas.width = window.innerWidth;
 
-# Animación de símbolos cayendo
-def rain():
-    cols = os.get_terminal_size().columns
-    while True:
-        line = ''.join(random.choice(symbols) for _ in range(cols))
-        print(BLUE + line + RESET)
-        time.sleep(0.05)
+    const symbols = "アカサタナハマヤラワ0123456789@#$%&";
+    const fontSize = 16;
+    const columns = canvas.width / fontSize;
 
-try:
-    clear()
-    show_title()
-    time.sleep(3)
-    while True:
-        rain()
-except KeyboardInterrupt:
-    clear()
-    print("Saliendo...")
+    const drops = Array.from({ length: columns }).fill(1);
+
+    function draw() {
+      ctx.fillStyle = "rgba(0, 0, 0, 0.05)";
+      ctx.fillRect(0, 0, canvas.width, canvas.height);
+
+      ctx.fillStyle = "#00aaff"; // azul fuerte
+      ctx.font = fontSize + "px monospace";
+
+      for (let i = 0; i < drops.length; i++) {
+        const text = symbols[Math.floor(Math.random() * symbols.length)];
+        ctx.fillText(text, i * fontSize, drops[i] * fontSize);
+
+        if (drops[i] * fontSize > canvas.height && Math.random() > 0.975) {
+          drops[i] = 0;
+        }
+        drops[i]++;
+      }
+    }
+
+    setInterval(draw, 33);
+  </script>
+</body>
+</html>
